# forge

./: .gitignore  Cargo.toml  DEVIATIONS.md  MEMORIES.md  PLAN.md  PROGRESS.md  README.md  TESTING.md  USAGE.md  dev.sh
.claude/: settings.local.json
crates/forge/: Cargo.toml
crates/forge-codegen/: Cargo.toml
crates/forge-core/: Cargo.toml
crates/forge-core/src/: error.rs  lib.rs
crates/forge-core/src/auth/: claims.rs  mod.rs
crates/forge-core/src/cluster/: mod.rs  node.rs  roles.rs  traits.rs
crates/forge-core/src/config/: cluster.rs  database.rs  mod.rs  observability.rs
crates/forge-core/src/cron/: context.rs  mod.rs  schedule.rs  traits.rs
crates/forge-core/src/function/: context.rs  dispatch.rs  mod.rs  traits.rs
crates/forge-core/src/job/: context.rs  mod.rs  traits.rs
crates/forge-core/src/observability/: alert.rs  log.rs  metric.rs  mod.rs  trace.rs
crates/forge-core/src/rate_limit/: mod.rs
crates/forge-core/src/realtime/: mod.rs  readset.rs  session.rs  subscription.rs
crates/forge-core/src/schema/: field.rs  function.rs  mod.rs  model.rs  registry.rs  types.rs
crates/forge-core/src/tenant/: mod.rs
crates/forge-core/src/testing/: assertions.rs  db.rs  mock_dispatch.rs  mock_http.rs  mod.rs
crates/forge-core/src/testing/context/: action.rs  cron.rs  job.rs  mod.rs  mutation.rs  query.rs  workflow.rs
crates/forge-core/src/workflow/: context.rs  events.rs  mod.rs  parallel.rs  step.rs  step_runner.rs  suspend.rs  traits.rs
crates/forge-macros/: Cargo.toml
crates/forge-runtime/: Cargo.toml
crates/forge-runtime/migrations/: 0000_forge_internal.sql
crates/forge-runtime/src/: lib.rs
crates/forge-runtime/src/cluster/: heartbeat.rs  leader.rs  mod.rs  registry.rs  shutdown.rs
crates/forge-runtime/src/cron/: mod.rs  registry.rs  scheduler.rs
crates/forge-runtime/src/dashboard/: api.rs  assets.rs  mod.rs  pages.rs
crates/forge-runtime/src/db/: mod.rs  pool.rs
crates/forge-runtime/src/function/: cache.rs  executor.rs  mod.rs  registry.rs  router.rs
crates/forge-runtime/src/gateway/: auth.rs  metrics.rs  mod.rs  request.rs  response.rs  rpc.rs  server.rs  tracing.rs  websocket.rs
crates/forge-runtime/src/jobs/: dispatcher.rs  executor.rs  mod.rs  queue.rs  registry.rs  worker.rs
crates/forge-runtime/src/migrations/: builtin.rs  diff.rs  executor.rs  generator.rs  mod.rs  runner.rs
crates/forge-runtime/src/observability/: alerts.rs  collector.rs  config.rs  mod.rs  partitions.rs  storage.rs  tracing_layer.rs
crates/forge-runtime/src/rate_limit/: limiter.rs  mod.rs
crates/forge-runtime/src/realtime/: adaptive.rs  invalidation.rs  listener.rs  manager.rs  mod.rs  reactor.rs  websocket.rs
crates/forge-runtime/src/testing/: assertions.rs  context.rs  mock.rs  mod.rs
crates/forge-runtime/src/workflow/: event_store.rs  executor.rs  mod.rs  registry.rs  scheduler.rs  state.rs
crates/forge/src/: lib.rs  main.rs  runtime.rs
crates/forge/src/cli/: add.rs  generate.rs  migrate.rs  mod.rs  new.rs  run.rs  runtime_generator.rs  template.rs
crates/forge/templates/frontend/: env.tmpl  eslint.config.js.tmpl  package.json.tmpl  prettierignore.tmpl  svelte.config.js.tmpl
crates/forge/templates/frontend/lib/forge/: api.ts.tmpl  index.ts.tmpl  types.ts.tmpl
crates/forge/templates/frontend/routes/: layout.svelte.tmpl  page.svelte.tmpl
crates/forge/templates/project/: Cargo.toml.tmpl  Dockerfile.tmpl  README.md.tmpl  docker-compose.yml.tmpl  dockerignore.tmpl  env.tmpl  forge.toml.tmpl  gitignore.tmpl  main.rs.tmpl
crates/forge/templates/project/functions/: account_verification_workflow.rs.tmpl  app_stats.rs.tmpl  export_users_job.rs.tmpl  get_bitcoin_price_action.rs.tmpl  get_quote_action.rs.tmpl  heartbeat_stats_cron.rs.tmpl  mod.rs.tmpl  send_welcome_action.rs.tmpl  tests.rs.tmpl  users.rs.tmpl
crates/forge/templates/project/migrations/: 0001_initial.sql.tmpl
crates/forge/templates/project/schema/: mod.rs.tmpl  user.rs.tmpl
crates/forge/templates/runtime/: ForgeProvider.svelte.tmpl  api.ts.tmpl  client.ts.tmpl  context.ts.tmpl  index.ts.tmpl  package.json.tmpl  stores.ts.tmpl  types.ts.tmpl
docs/: DOCUMENTATION.md  docusaurus.config.ts  sidebars.ts
docs/architecture/: OVERVIEW.md
docs/cluster/: CLUSTERING.md
docs/core/: CRONS.md  FUNCTIONS.md  JOBS.md  REACTIVITY.md  SCHEMA.md  WORKFLOWS.md
docs/database/: MIGRATIONS.md  POSTGRES_SCHEMA.md
docs/docs/: index.mdx  quick-start.mdx  why-forge.mdx
docs/frontend/: FRONTEND.md
docs/observability/: DASHBOARD.md  OBSERVABILITY.md
docs/reference/: CLI.md
examples/task-manager/: Cargo.toml  forge.toml
examples/task-manager/frontend/: package.json
examples/task-manager/frontend/src/: app.css
examples/task-manager/frontend/src/lib/forge/: api.ts
examples/task-manager/frontend/src/routes/: +layout.svelte  +page.svelte
examples/task-manager/frontend/src/routes/settings/: +page.svelte
examples/task-manager/migrations/: 20240101000000_init.sql
examples/task-manager/src/: lib.rs  main.rs
examples/task-manager/src/functions/: mod.rs
examples/task-manager/src/functions/actions/: mod.rs
examples/task-manager/src/functions/crons/: mod.rs
examples/task-manager/src/functions/jobs/: mod.rs
examples/task-manager/src/functions/mutations/: mod.rs
examples/task-manager/src/functions/queries/: mod.rs
examples/task-manager/src/functions/workflows/: mod.rs
examples/task-manager/src/schema/: enums.rs  mod.rs  models.rs
examples/todo-app/: Cargo.toml
examples/todo-app/src/: lib.rs
frontend/: package.json  svelte.config.js  tsconfig.json
proposal/: PROPOSAL.md
proposal/appendix/: COMPARISON.md  DECISIONS.md  GLOSSARY.md
proposal/architecture/: DATA_FLOW.md  OVERVIEW.md  RESILIENCE.md  SINGLE_BINARY.md
proposal/cluster/: CLUSTERING.md  DISCOVERY.md  LEADER_ELECTION.md  MESHING.md  WORKERS.md
proposal/core/: CRONS.md  FUNCTIONS.md  JOBS.md  REACTIVITY.md  SCHEMA.md  WORKFLOWS.md
proposal/database/: CHANGE_TRACKING.md  JOB_QUEUE.md  MIGRATIONS.md  POSTGRES_SCHEMA.md
proposal/deployment/: DEPLOYMENT.md  DOCKER.md  KUBERNETES.md  (+1 more)
(+75 files in other folders)
