[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
regex-lite = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
