[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
futures = "0.3"
regex-lite = "0.1.8"
once_cell = "1.19"

# Optional: for embedded test database
postgresql_embedded = { version = "0.20", features = ["bundled"], optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
testing = []
embedded-test-db = ["postgresql_embedded"]
