[package]
name = "forge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }

tokio = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
regex = "1.12"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
futures-util = "0.3"
tokio-util = "0.7"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.14"
