[package]
name = "forge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forge"
path = "src/lib.rs"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
forge-runtime = { path = "../forge-runtime" }
forge-codegen = { path = "../forge-codegen" }
forge-macros = { path = "../forge-macros" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
dotenvy = "0.15"
indicatif = "0.18"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json"] }
axum = { workspace = true }

[dev-dependencies]
tempfile = "3"
