[workspace]

[package]
name = "task-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "task-manager"
path = "src/main.rs"

[dependencies]
forge = { path = "../../crates/forge" }
forge-core = { path = "../../crates/forge-core" }
forge-runtime = { path = "../../crates/forge-runtime" }
forge-macros = { path = "../../crates/forge-macros" }

tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
