[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
forge = { path = "../../crates/forge" }
forge-core = { path = "../../crates/forge-core" }
forge-runtime = { path = "../../crates/forge-runtime" }
forge-macros = { path = "../../crates/forge-macros" }
forge-codegen = { path = "../../crates/forge-codegen" }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
anyhow = "1.0"
async-trait = "0.1"
